// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PxeTemplateFolders Component should render with empty folders array 1`] = `
<div
  id="template_folders_div"
>
  <MiqDataTable
    gridChecks={Array []}
    headers={
      Array [
        Object {
          "col_idx": undefined,
          "header": "Name",
          "key": "Name",
        },
      ]
    }
    mode="template-folders"
    onCellClick={[Function]}
    pageOptions={
      Object {
        "page": 1,
        "pageSize": 20,
        "pageSizes": Array [
          5,
          10,
          20,
          50,
          100,
          200,
        ],
        "totalItems": 10,
      }
    }
    rowCheckBox={false}
    rows={
      Array [
        Object {
          "Name": Object {
            "icon": "carbon--Folder",
            "text": "Examples (read only)",
          },
          "clickable": true,
          "id": "xx-xx-system",
        },
      ]
    }
    showPagination={false}
    size="lg"
    sortable={false}
    stickyHeader={false}
    truncateText={true}
  />
</div>
`;

exports[`PxeTemplateFolders Component should render with folders data 1`] = `
<div
  id="template_folders_div"
>
  <MiqDataTable
    gridChecks={Array []}
    headers={
      Array [
        Object {
          "col_idx": undefined,
          "header": "Name",
          "key": "Name",
        },
      ]
    }
    mode="template-folders"
    onCellClick={[Function]}
    pageOptions={
      Object {
        "page": 1,
        "pageSize": 20,
        "pageSizes": Array [
          5,
          10,
          20,
          50,
          100,
          200,
        ],
        "totalItems": 10,
      }
    }
    rowCheckBox={false}
    rows={
      Array [
        Object {
          "Name": Object {
            "icon": "carbon--Folder",
            "text": "Examples (read only)",
          },
          "clickable": true,
          "id": "xx-xx-system",
        },
        Object {
          "Name": Object {
            "icon": "carbon--Folder",
            "text": "Folder 1",
          },
          "clickable": true,
          "id": "pit-1",
        },
        Object {
          "Name": Object {
            "icon": "carbon--Folder",
            "text": "Folder 2",
          },
          "clickable": true,
          "id": "pit-2",
        },
      ]
    }
    showPagination={false}
    size="lg"
    sortable={false}
    stickyHeader={false}
    truncateText={true}
  />
</div>
`;
